src/test/deca/context/invalid/homemade/duplicate_method.deca
// trying to create method twice

class A {
    int x(float y) { return 3; }
    int x(float y) { return 3; }
}